# wednesday_tg_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  INSTALLATION.md  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  TYPING_GUIDE.md  docker-compose.test.yml  docker-compose.yml  env_example.txt  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docker-build.yml  pytest-check.yml  pytest.yml  setup-python.yml
bot/: handlers.py  support_bot.py  wednesday_bot.py
docs/: INSTALLATION.md  PROJECT_SUMMARY.md  TYPING_GUIDE.md
docs/release-notes/: v1.0.0.md  v2.0.0.md  v3.0.0.md  v4.0.0.md  v5.0.0.md  v5.1.0.md  v6.0.0.md
docs/sql/: 001_add_prompts_table.sql  001_add_prompts_table_down.sql  002_add_images_table.sql  002_add_images_table_down.sql  003_add_metrics_events_table.sql  003_add_metrics_events_table_down.sql
services/: __init__.py  image_generator.py  prompt_cache.py  prompt_generator.py  rate_limiter.py  scheduler.py  user_state_store.py
tests/: README.md  conftest.py  test_typing.py
tests/test_bot/: test_handlers.py  test_support_bot.py  test_wednesday_bot.py
tests/test_services/: test_image_generator.py  test_prompt_generator.py  test_redis_services.py  test_scheduler.py
tests/test_utils/: test_admins_store.py  test_chats_store.py  test_config.py  test_dispatch_registry.py  test_images_migration_sql.py  test_images_store.py  test_metrics.py  test_models_store.py  test_paths.py  test_prompts_migration_sql.py  test_prompts_store.py  test_usage_tracker.py
utils/: __init__.py  admins_store.py  chats_store.py  config.py  dispatch_registry.py  images_store.py  logger.py  metrics.py  models_store.py  paths.py  postgres_client.py  postgres_schema.py  prompts_store.py  redis_client.py  usage_tracker.py
